<?xml version="1.0"?>
<package format="2">
  <name>can_logger</name>
  <version>0.0.0</version>
  <description>The can_logger package</description>

  <maintainer email="abdu@todo.todo">abdu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
   
  </export>
</package>
